tests/machine/x/st/inner_join.out
Object: Dictionary error: did not understand #newFrom:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
Dictionary class(Object)>>doesNotUnderstand: #newFrom: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/inner_join.st:2)
Object: Dictionary error: did not understand #newFrom:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
Dictionary class(Object)>>doesNotUnderstand: #newFrom: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/inner_join.st:3)
--- Orders with customer info ---